# pedala-sjc

./: LICENSE  README.md  app.py  dados_FAISS_README.md  db_utils.py  echarts_helper.py  echarts_helpers.py  init_db.py  new_route_function.py  new_route_version.py  pdf_generator.py  pedala_teste_2.py  pyproject.toml  rota_simplificada.py  rotas_curtas.py  simplificar_instrucoes.py
utils/: new_gauge_chart.py  openai_helper.py  openai_helpers.py  stability_helper.py
